--- a/kubernetes/station/templates/stationdb-deployment.yaml
+++ b/kubernetes/station/templates/stationdb-deployment.yaml
@@ -37,7 +37,10 @@ spec:
           - name: MYSQL_USER
             value: {{ .Values.stationdb.mysqlUser | quote  }}
           - name: MYSQL_PASSWORD
-            value: {{ .Values.stationdb.mysqlPassword | quote  }}
+            valueFrom:
+              secretKeyRef:
+                name: stationdb-secret 
+                key: database-password 
           volumeMounts:
           - name: datastationdb  
             mountPath: /var/lib/mysql
