--- a/kubernetes/station/templates/stationdb-deployment.yaml
+++ b/kubernetes/station/templates/stationdb-deployment.yaml
@@ -50,4 +50,4 @@ spec:
       volumes:
       - name: datastationdb 
         persistentVolumeClaim: 
-          claimName: datastationdb  
+          claimName: stationdb-data  
