Correction eks efs

--- a/kubernetes/awsvalue.yaml
+++ b/kubernetes/awsvalue.yaml
@@ -33,7 +33,7 @@ stationdb:
   storage: 
     
     # Storage type
-    storageClass: aws-efs 
+    storageClass: efs 
 
     # Data Capacity
     dataCapacity: 100Mi 
