Utilise eksaftercreateappli au lieu de external-dns

--- a/kubernetes/awsvalue.yaml
+++ b/kubernetes/awsvalue.yaml
@@ -55,7 +55,7 @@ stationback:
   nbConnectionDbMaxActive: 15
   
   # Hostname
-  hostname: stationback.interne.exakaconsulting.org
+  hostname: stationback.exakaconsulting.org
   
   # External port
   externalPort: 8080
