--- a/kubernetes/awsvalue.yaml
+++ b/kubernetes/awsvalue.yaml
@@ -33,8 +33,8 @@ stationdb:
   storage: 
     
     # Storage type
-    #storageClass: 'none' 
-    storageClass: 'efs-sc' 
+    storageClass: 'none' 
+    #storageClass: 'efs-sc' 
 
     # Data Capacity
     dataCapacity: 100Mi 
