--- a/kubernetes/station/templates/stationback-ingress.yaml
+++ b/kubernetes/station/templates/stationback-ingress.yaml
@@ -1,3 +1,4 @@
+{{- if (ne .Values.stationback.ingress.type "awstargetgroupbind")   }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -20,3 +21,4 @@ spec:
             name: stationbackservice
             port:
               number: {{ .Values.stationback.service.internalPort }}
+{{- end }}
