--- a/kubernetes/awsvalue.yaml
+++ b/kubernetes/awsvalue.yaml
@@ -15,6 +15,10 @@
 app:
   # Context path of the repo nexus url
   repoNexusUrl: ''
+
+  network:
+    vpc_cidr:  '12.0.0.0/21' 
+ 
  
 stationdb:
   # Directory where to put data of the database
@@ -72,7 +76,7 @@ stationback:
     internalPort: 4000
     
     # Type service:
-    serviceType: ClusterIP 
+    serviceType: NodePort 
 
   image:
     pullPolicy: IfNotPresent   
