--- a/kubernetes/station/templates/stationfront-targetgrbin.yaml
+++ b/kubernetes/station/templates/stationfront-targetgrbin.yaml
@@ -14,7 +14,7 @@ spec:
     ingress:
       - from:
         - ipBlock:
-            cidr: 12.0.0.0/21
+            cidr: {{ .Values.app.network.vpc_cidr | quote }} 
         ports:
         - port: {{ .Values.stationfront.service.internalPort }} 
           protocol: TCP
