--- a/kubernetes/station/templates/stationdb-secret.yaml
+++ b/kubernetes/station/templates/stationdb-secret.yaml
@@ -1,3 +1,4 @@
+{{- if (ne .Values.stationdb.mode "externaldb")   }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,3 +7,4 @@ metadata:
 type: Opaque
 data:
   database-password: {{ .Values.stationdb.mysqlPassword | b64enc | quote }}
+{{- end }}  
