--- a/kubernetes/station/templates/stationdb-pv.yaml
+++ b/kubernetes/station/templates/stationdb-pv.yaml
@@ -1,3 +1,4 @@
+{{- if (ne .Values.stationdb.mode "externaldb")   }}
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -20,3 +21,4 @@ spec:
   hostPath:
     path: {{ .Values.stationdb.databaseData | quote  }} 
   {{- end }}
+{{- end }}
