--- a/kubernetes/station/templates/stationdb-service.yaml
+++ b/kubernetes/station/templates/stationdb-service.yaml
@@ -1,3 +1,4 @@
+{{- if (ne .Values.stationdb.mode "externaldb")   }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -12,3 +13,5 @@ spec:
     protocol: TCP
   selector:
     app: stationdb
+{{- end }}
+
