--- a/kubernetes/station/templates/stationdb-secret.yaml
+++ b/kubernetes/station/templates/stationdb-secret.yaml
@@ -5,4 +5,8 @@ metadata:
   namespace:  {{ .Release.Namespace | quote }}
 type: Opaque
 data:
+  # Database password
   database-password: {{ .Values.stationdb.mysqlPassword | b64enc | quote }}
+  
+  # Root database password
+  database-rootpassword: {{ .Values.stationdb.mysqlRootPassword | b64enc |quote  }} 
