--- a/kubernetes/station/templates/stationdb-internal-secret.yaml
+++ b/kubernetes/station/templates/stationdb-internal-secret.yaml
@@ -1,3 +1,4 @@
+{{- if (ne .Values.stationdb.mode "internaldb")   }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -9,4 +10,6 @@ data:
   database-password: {{ .Values.stationdb.mysqlPassword | b64enc | quote }}
   
   # Root database password
-  database-rootpassword: {{ .Values.stationdb.mysqlRootPassword | b64enc |quote  }} 
+  database-rootpassword: {{ .Values.stationdb.mysqlRootPassword | b64enc |quote  }}
+
+{{- end }} 
