--- a/kubernetes/station/templates/stationdb-external-secret.yaml
+++ b/kubernetes/station/templates/stationdb-external-secret.yaml
@@ -8,14 +8,17 @@ spec:
 
   #roleArn: "arn:aws:iam::794637260409:role/aws-eks-nodes-role20210726193511238600000002"
 
+  region: {{ .Values.app.network.region | quote  }} 
+
   data:
+    
 
     - key: stationsec-secretmanager
-      name: stationdbrootpassword 
-      property: database-rootpassword 
+      property: stationdbrootpassword 
+      name: database-rootpassword 
 
     - key: stationsec-secretmanager 
-      name: stationdbpassword 
-      property: database-password
+      property: stationdbpassword 
+      name: database-password
 
 
