Correction external secret

--- a/kubernetes/station/templates/stationdb-internal-secret.yaml
+++ b/kubernetes/station/templates/stationdb-internal-secret.yaml
@@ -1,4 +1,4 @@
-{{- if (ne .Values.stationdb.mode "internaldb")   }}
+{{- if (eq .Values.stationdb.mode "internaldb")   }}
 apiVersion: v1
 kind: Secret
 metadata:
