--- a/kubernetes/station/templates/stationdb-external-secret.yaml
+++ b/kubernetes/station/templates/stationdb-external-secret.yaml
@@ -1,3 +1,4 @@
+{{- if (eq .Values.stationdb.mode "externaldb")   }}
 apiVersion: "kubernetes-client.io/v1" 
 kind: ExternalSecret
 metadata:
@@ -21,4 +22,4 @@ spec:
       property: stationdbpassword 
       name: database-password
 
-
+{{- end }}
