Correction get EFS

--- a/kubernetes/awsvalue.yaml
+++ b/kubernetes/awsvalue.yaml
@@ -72,7 +72,9 @@ stationdb:
     # Global Capacity
     globalCapacity: 150Mi
 
-    efsid: fs-7af0cecb
+    efsid: '' 
+
+    efsaccesspointid: ''
        
    
   image:
