Add volumeName to pvc

--- a/kubernetes/station/templates/stationdb-pvc.yaml
+++ b/kubernetes/station/templates/stationdb-pvc.yaml
@@ -11,4 +11,5 @@ spec:
   resources:
     requests: 
       storage: {{ .Values.stationdb.storage.dataCapacity | quote}}
+  volumeName: station-pv 
 {{- end }}
