--- a/cloudformation/networks/main.yaml
+++ b/cloudformation/networks/main.yaml
@@ -1,8 +1,8 @@
-AWSTemplateFormatVersion: 2010-09-09
-Description: >-
-  Station Demo networks 
-
+---
 Parameters:
+  SecurityGroupDescription:
+    Description: Security group description
+    Type: String
   Env:
     Type: String
     Description: The environment you're deploying to.
@@ -15,37 +15,49 @@ Mappings:
       AvailableZonePublicSubnet1:  'eu-west-3a'
 
 
-Resources:
+Resources: 
+
+  # The VPC to create
   StationDemoVPC:
     Type: 'AWS::EC2::VPC'
     Properties:
-      CidrBlock:
-        Fn::FindInMap:
-          - Environments
-          - Ref: Env
-          - CidrBlockStationVpc
+      CidrBlock: !FindInMap [ Environments, !Ref Env, CidrBlockStationVpc]
       EnableDnsHostnames: true
       EnableDnsSupport: true
       Tags:
         - Key: Name
           Value: 'StationDemo'
 
+  # The subnet to create
   StationPublicSubnet1:
      Type: AWS::EC2::Subnet
      Properties:
-       CidrBlock: 
-         Fn::FindInMap:
-          - Environments
-          - Ref: Env
-          - CidrBlockStationPublicSubnet1         
-       AvailabilityZone:
-         Fn::FindInMap: 
-          - Environments
-          - Ref: Env
-          - AvailableZonePublicSubnet1
+       CidrBlock: !FindInMap [ Environments, !Ref Env, CidrBlockStationPublicSubnet1]     
+       AvailabilityZone: !FindInMap [ Environments, !Ref Env, AvailableZonePublicSubnet1] 
        VpcId: !Ref StationDemoVPC
        Tags:
          - Key: Name
            Value: 'StationDemo'
 
-  
+  # The instance to create
+  MyInstance:
+    Type: AWS::EC2::Instance
+    Properties:
+      ImageId:  ami-0984c6fda63734a94
+      InstanceType: t2.micro
+      SubnetId: !Ref StationPublicSubnet1
+      SecurityGroupIds:
+        - !Ref SSHSecurityGroup
+
+  # The security group for the EC2 instance. 
+  SSHSecurityGroup:
+     Type: AWS::EC2::SecurityGroup
+     Properties:
+       VpcId: !Ref StationDemoVPC
+       GroupName: "Test Target Group"
+       GroupDescription: !Ref SecurityGroupDescription
+       SecurityGroupIngress:
+       - CidrIp : 192.168.12.12/31
+         FromPort: 22
+         IpProtocol: tcp
+         ToPort: 22
