Ajout README pour cloudwatchevent

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ Thumbs.db
 terraformaws/ec2-sample/output/
 terraformaws/ecs/output/
 terraformaws/networks/output/
+
+.package/
+**/sources/**/*.zip
