--- a/.github/workflows/launch-maven-stationapplication.yaml
+++ b/.github/workflows/launch-maven-stationapplication.yaml
@@ -16,3 +16,4 @@ jobs:
 
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
+        working-directory: application
