--- a/.github/workflows/launch-maven-stationapplication.yaml
+++ b/.github/workflows/launch-maven-stationapplication.yaml
@@ -2,6 +2,9 @@ name: Java CI
 
 on: [push]
 
+env:
+  NODEJS_VERSION: 14
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,6 +16,11 @@ jobs:
         with:
           java-version: '8'
           distribution: 'adopt'
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.NODEJS_VERSION}}
+      - run: node --version
 
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
