--- a/.github/workflows/launch-maven-stationapplication.yaml
+++ b/.github/workflows/launch-maven-stationapplication.yaml
@@ -11,14 +11,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Java 8
         uses: actions/setup-java@v3
         with:
           java-version: '8'
           distribution: 'adopt'
 
-      - uses: actions/setup-node@v3
       - name: Set up NodeJS ${{ env.NODEJS_VERSION}} 
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODEJS_VERSION}}
       - run: node --version
